Setup conversations -> conversation

--- a/Messages/Main.storyboard
+++ b/Messages/Main.storyboard
@@ -248,6 +248,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="P4Y-2v-GD0"/>
+        <segue reference="nTP-18-0rI"/>
     </inferredMetricsTieBreakers>
 </document>
